--- a/public/new_post.html
+++ b/public/new_post.html
@@ -100,7 +100,7 @@
             <!-- BEGIN form input -->
             <div class= "title-input">
                 <div class="input-group input-group-lg">
-                    <span class="input-group-addon" id="sizing-addon1"></span>
+                    <span class="input-group-addon" id="sizing-addon1">CodeBase</span>
                      
                     <input type="text" class="form-control" id= "title" placeholder="Enter title here!" aria-describedby="sizing-addon1">
                 </div>
