--- a/public/creators.html
+++ b/public/creators.html
@@ -5,9 +5,26 @@
     <title></title>
     <link type="text/css" rel="stylesheet" href="./css/creators.css">
     <script src="./js/creators.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    <div class="creators" id="block"><img src="./img/tardis.jpg"></img></div>
+    <div class='credits'>
+        <marquee scrollamount='5' scrolldelay='0' direction='up' height='100%' class="credits">
+            <h1>Contributions</h1>
+            <h2>King Edward</h2>
+            <h4>Team Leader - Login Page - HTML/CSS/JS</h4>
+            <h2>(Henry)</h2>
+            <h4>Audio Editor - Home Page - HTML/CSS</h4>
+            <h2>(Stephen)</h2>
+            <h4>Image Editing - Create New Post Page - HTML/CSS</h4>
+            <h2>JimBoBo</h2>
+            <h4>Wedding Ambassador & Backend</h4>
+            <h1>Special Thanks:</h1>
+            <h2>Erty</h2>
+            <h2>&</h2>
+            <h2>Sarah</h2>
+        </marquee>
+    </div>
   <i></i>
     <i></i>
     <i></i>
