--- a/public/creators.html
+++ b/public/creators.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title></title>
     <link type="text/css" rel="stylesheet" href="./css/creators.css">
-    <script src="./js/creators.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
@@ -13,9 +12,9 @@
             <h1>Contributions</h1>
             <h2>King Edward</h2>
             <h4>Team Leader - Login Page - HTML/CSS/JS</h4>
-            <h2>(Henry)</h2>
+            <h2>Masta Panda</h2>
             <h4>Audio Editor - Home Page - HTML/CSS</h4>
-            <h2>(Stephen)</h2>
+            <h2>Crouching Tiger Hidden Ghost Code</h2>
             <h4>Image Editing - Create New Post Page - HTML/CSS</h4>
             <h2>JimBoBo</h2>
             <h4>Wedding Ambassador & Backend</h4>
@@ -25,6 +24,10 @@
             <h2>Sarah</h2>
         </marquee>
     </div>
+    <div id="eddie"></div>
+    <div id="jim"></div>
+    <div id="henry"></div>
+    <div id="stephen"></div>
   <i></i>
     <i></i>
     <i></i>
@@ -73,4 +76,5 @@ window.onload = function(){
     document.getElementById('rickRoll').play();
 }
 </script>
+    <script src="./js/creators.js"></script>
 </html>
