--- a/public/creators.html
+++ b/public/creators.html
@@ -24,10 +24,10 @@
             <h2>Sarah</h2>
         </marquee>
     </div>
-    <div id="eddie"></div>
-    <div id="jim"></div>
-    <div id="henry"></div>
-    <div id="stephen"></div>
+    <div class='head' id="eddie"></div>
+    <div class='head' id="jim"></div>
+    <div class='head' id="henry"></div>
+    <div class='head' id="stephen"></div>
   <i></i>
     <i></i>
     <i></i>
